--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-    "name": "appengine-hello-world",
-    "description": "Simple Hello World Node.js sample for Google App Engine Standard Environment.",
-    "version": "0.0.1",
-    "private": true,
-    "license": "Apache-2.0",
-    "author": "Google Inc.",
-    "engines": {
-      "node": ">=8.0.0"
-    },
-    "scripts": {
-      "start": "node server.js",
-      "test": "mocha --exit test/*.test.js"
-    },
-    "dependencies": {
-      "express": "^4.16.3"
-    },
-    "devDependencies": {
-      "mocha": "^6.1.4",
-      "supertest": "^4.0.2"
-    }
+  "name": "appengine-hello-world",
+  "description": "Simple Hello World Node.js sample for Google App Engine Standard Environment.",
+  "version": "0.0.1",
+  "private": true,
+  "license": "Apache-2.0",
+  "author": "Google Inc.",
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "mocha --exit test/*.test.js"
+  },
+  "dependencies": {
+    "@google-cloud/speech": "^3.4.0",
+    "@google-cloud/text-to-speech": "^2.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.16.3",
+    "fs": "0.0.1-security",
+    "util": "^0.12.1"
+  },
+  "devDependencies": {
+    "mocha": "^6.1.4",
+    "supertest": "^4.0.2"
   }
-  
+}
